--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@ layout: default
 ---
 <div style="display: flex; align-items: flex-start;">
     <div style="margin-right: 20px;">
-        <img src="your-photo.jpg" alt="Sangmin Simon Oh" style="width: 150px; border-radius: 50%;">
+        <img src="images/pic.jpg" alt="Heewon Hwang" style="width: 150px; border-radius: 50%;">
     </div>
     <div>
-        <p><b>Sangmin Simon Oh</b> [<a href="mailto:simon.oh@columbia.edu">oh@gsb.columbia.edu</a>] 
+        <p><b>Heewon Hwang</b> [<a href="mailto:heewon0120@yonsei.ac.kr">heewon0120@yonsei.ac.kr</a>] 
             <a href="https://twitter.com/plausiblyexog?lang=en"><i class="fab fa-twitter"></i></a> 
-            <a href="https://scholar.google.com/citations?user=FtSdNS8AAAAJ&hl=en&oi=ao"><i class="fas fa-graduation-cap"></i></a> 
-            <a href="https://www.linkedin.com/in/sangmin-simon-oh-28489854/"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://www.linkedin.com/in/heewonhwang/"><i class="fab fa-linkedin-in"></i></a>
         </p>
-        <p>Assistant Professor of Finance, <a href="https://business.columbia.edu/">Columbia Business School</a></p>
+        <p>Undergraduate Student, <a href="https://ysb.yonsei.ac.kr/default.asp?lang=e">Yonsei School of Business</a></p>
         <br>
         <p>My research is broadly within economics and finance, focusing on <b>asset pricing</b>, <b>investments</b>, and <b>insurance</b>. 
            My work focuses on how market structures and societal shifts shape the pricing and allocation of risk across financial markets, 
