--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <div style="display: flex; align-items: flex-start;">
     <div style="margin-right: 20px;">
-        <img src="images/pic.jpg" alt="Heewon Hwang" style="width: 150px; border-radius: 50%;">
+        <img src="images/pic.JPG" alt="Heewon Hwang" style="width: 150px; border-radius: 50%;">
     </div>
     <div>
         <p><b>Heewon Hwang</b> [<a href="mailto:heewon0120@yonsei.ac.kr">heewon0120@yonsei.ac.kr</a>] 
