--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@ layout: default
     </div>
     <div>
         <p><b>Heewon Hwang</b> [<a href="mailto:heewon0120@yonsei.ac.kr">heewon0120@yonsei.ac.kr</a>] 
-            <a href="https://twitter.com/plausiblyexog?lang=en"><i class="fab fa-twitter"></i></a> 
+            <a href="https://x.com/heewonhwng?s=21"><i class="fab fa-twitter"></i></a>
+            <a href="https://github.com/heewonh"><i class="fab fa-github"></i></a>
             <a href="https://www.linkedin.com/in/heewonhwang/"><i class="fab fa-linkedin-in"></i></a>
         </p>
         <p>Undergraduate Student, <a href="https://ysb.yonsei.ac.kr/default.asp?lang=e">Yonsei School of Business</a></p>
