--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@ layout: default
         </p>
         <p>Undergraduate Student, <a href="https://ysb.yonsei.ac.kr/default.asp?lang=e">Yonsei School of Business</a></p>
         <br>
-        <p>My research is broadly within economics and finance, focusing on <b>asset pricing</b>, <b>investments</b>, and <b>insurance</b>. 
-           My work focuses on how market structures and societal shifts shape the pricing and allocation of risk across financial markets, 
-           with a focus on investor behavior and often leveraging ML/AI tools.</p>
+        <p>I am an undergraduate at Yonsei University, majoring in Business Administration with AI Concentration.
+            My research interest lies in finance, particularly in the fields of <b>asset pricing</b>, <b>investments</b>, and <b>financial machine learning</b>.
+           I am currently working as a research assistant at the Yonsei School of Business, under the guidance of Professor <a href="https://junkyung.yonsei.ac.kr/">Jun Kyung Auh</a>.</p>
     </div>
 </div>
 <br>
