--- a/index.html
+++ b/index.html
@@ -6,31 +6,31 @@ layout: default
         <img src="images/pic.jpg" alt="Heewon Hwang" style="width: 150px; height: 150px; max-width: none; border-radius: 50%; object-fit: cover;">
     </div>
     <div>
-        <p><b>Heewon Hwang</b> [<a href="mailto:heewon0120@yonsei.ac.kr">heewon0120@yonsei.ac.kr</a>] 
+        <p>
+            <b>Heewon Hwang</b> [<a href="mailto:heewon0120@yonsei.ac.kr">heewon0120@yonsei.ac.kr</a>] 
             <a href="https://x.com/heewonhwng?s=21"><i class="fab fa-twitter"></i></a>
             <a href="https://github.com/heewonh"><i class="fab fa-github"></i></a>
             <a href="https://www.linkedin.com/in/heewonhwang/"><i class="fab fa-linkedin-in"></i></a>
         </p>
         <p>Undergraduate Student, <a href="https://ysb.yonsei.ac.kr/default.asp?lang=e">Yonsei School of Business</a></p>
         <br>
-        <p>I am an undergraduate at Yonsei University, majoring in Business Administration with AI Concentration.
+        <p>
+            I am an undergraduate at Yonsei University, majoring in Business Administration with AI Concentration. 
             My research interest lies in finance, particularly in the fields of <b>asset pricing</b>, <b>investments</b>, and <b>financial machine learning</b>.
-           I am currently working as a research assistant at the Yonsei School of Business, under the guidance of Professor <a href="https://junkyung.yonsei.ac.kr/">Jun Kyung Auh</a>.</p>
+            I am currently working as a research assistant at the Yonsei School of Business, under the guidance of Professor <a href="https://junkyung.yonsei.ac.kr/">Jun Kyung Auh</a>.
+        </p>
     </div>
 </div>
 <br>
 <br>
-<p><b>Nota Bene</b></p>
+<p><b>Worth Noting</b></p>
 <ul>
-    <li>I obtained my Ph.D. from the <a href="https://www.chicagobooth.edu/phd/dissertation-areas/financial-economics-joint-program">Joint Program in Financial Economics</a> 
-        at the University of Chicago Booth School of Business and the Kenneth C. Griffin Department of Economics. Before graduate school, 
-        I graduated from the <a href="https://fisher.wharton.upenn.edu/">Jerome Fisher Program in Management & Technology (M&T)</a> at the University of Pennsylvania 
-        with a B.S. in Finance and an M.S./B.S. in Electrical Engineering. Prior to my doctoral studies, I worked at 
-        <a href="https://www.aqr.com/">AQR Capital Management</a> and <a href="https://www.crunchbase.com/organization/forefront-capital-management">Forefront Capital Management</a>.
-    </li>
-    <li>I run a daily listserv called "Plausibly Exogenous." You can sign up <a href="https://sangminoh.substack.com/p/coming-soon">here</a> and view past emails 
-        <a href="https://sangmino.notion.site/1a897b8106ca44eeaf31dcd5ae5a61b1">here</a>. More recently, I started a new blog with 
-        <a href="https://benmarrow.com/">Ben Marrow</a> called "Better Know a Dataset." You can check it out <a href="https://bkad.substack.com/">here</a>.
-    </li>
-    <li>If you are on the job market, <a href="https://sangmino.github.io/jmc">this page</a> might be of some use to you.</li>
+    <li>I was awarded the 2025 <a href="https://www.fulbright.or.kr/en/">Fulbright Graduate Student Program Award</a>.</li>
+    <li>I spent nearly half of my life in Chennai, India. I graduated from the <a href="https://www.aischennai.org/">American International School Chennai</a>.</li>
+    <li>I sometimes doodle on my iPad. You can check it out <a href="https://www.instagram.com/grimm_________/">here</a>.</li>
 </ul>
+
+<!-- Comment Section -->
+<div style="position: fixed; bottom: 10px; right: 10px;">
+    Website inspired by Professor <a href="https://sangmino.github.io/">Sangmin Simon Oh</a>
+</div>
