--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@ layout: default
 </ul>
 
 <!-- Comment Section -->
-<div style="position: fixed; bottom: 10px; right: 10px; margin: 4px 0; font-size: 12px;">
+<div style="position: fixed; bottom: 10px; right: calc(50% - 455px);">
     Website inspired by Professor <a href="https://sangmino.github.io/">Sangmin Simon Oh</a>
 </div>
