--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ layout: default
     <li>I sometimes doodle on my iPad. You can check it out <a href="https://www.instagram.com/grimm_________/">here</a>.</li>
 </ul>
 
-<!-- Comment Section -->
-<div style="position: fixed; bottom: 50px; right: calc(50% - 455px);">
+<!-- Credit -->
+<div style="bottom: 50px; right: calc(50% - 455px);">
     Website inspired by Professor <a href="https://sangmino.github.io/">Sangmin Simon Oh</a>
 </div>
