--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@ layout: default
     <li>I spent nearly half of my life in Chennai, India. I graduated from the <a href="https://www.aischennai.org/">American International School Chennai</a>.</li>
     <li>I sometimes doodle on my iPad. You can check it out <a href="https://www.instagram.com/grimm_________/">here</a>.</li>
 </ul>
-
+<br>
+<br>
 <!-- Credit -->
-<div style="bottom: 50px; right: calc(50% - 455px);">
+<div style="float: right;">
     Website inspired by Professor <a href="https://sangmino.github.io/">Sangmin Simon Oh</a>
 </div>
