--- a/blog.html
+++ b/blog.html
@@ -10,3 +10,9 @@ layout: default
   <li>Post Modern Portfolio Theory (PMPT)<span style="float:right;">November 2023</span></li>
   <li>Modern Portfolio Theory (MPT)<span style="float:right;">July 2023</span></li>
 </ul>
+<br>
+<h3>Test</h3>
+{% for post in site.posts %}
+<ul>
+  <li><a href="{{ post.url }}">{{ post.title }}</a><span style="float:right;">{{ post.date | date: "%B %e, %Y" }}</span></li>
+</ul>
