--- a/blog.html
+++ b/blog.html
@@ -16,3 +16,4 @@ layout: default
 <ul>
   <li><a href="{{ post.url }}">{{ post.title }}</a><span style="float:right;">{{ post.date | date: "%B %e, %Y" }}</span></li>
 </ul>
+{% endfor %}
