--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: default
         <p>
             I am an undergraduate at Yonsei University, majoring in Business Administration with AI Concentration. 
             My research interest lies in finance, particularly in the fields of <b>asset pricing</b>, <b>investments</b>, and <b>financial machine learning</b>.
-            I am currently working as a research assistant at the Yonsei School of Business, under the guidance of Professor <a href="https://junkyung.yonsei.ac.kr/">Jun Kyung Auh</a>.
+            I am currently working as a research assistant at the Yonsei School of Business, under the guidance of <a href="https://junkyung.yonsei.ac.kr/">Jun Kyung Auh</a>.
         </p>
     </div>
 </div>
