--- a/research.html
+++ b/research.html
@@ -4,19 +4,29 @@ layout: default
 
 <h3>Coursework</h3>
 <ul>
-    <li>
-        Semibeta asset pricing model in the  Korean market: An extension study
-    </li>
+    <li><b>Semibeta asset pricing model in the Korean market: An extension study</b> [<a href="/documents/semibeta.pdf">Paper</a>] [<a href="https://github.com/heewonh/semibeta">Code</a>]</li>
+    <p>Advised by <a href="https://ysb.yonsei.ac.kr/faculty.asp?mid=n02&sOpt=&uid=59">Jaehoon Hahn</a></p>
+    <p><i>Honors Program in Business</i>, Yonsei School of Business, June 2024</p>
+    <p>
+        Abstract: This study extends the four-semibeta asset pricing model to the Korean stock
+        market, including KOSPI, KOSDAQ and the overall market. Using updated data,
+        it evaluates the model's robustness for more recent market movements,
+        including the analysis of financial crises, such as COVID-19 and the 2022
+        market decline. Findings show two semibetas consistently significant across all
+        market variants, but the model's performance during recent crises is less clear,
+        indicating potential limitations and area for further research.
+    </p>
 </ul>
 
 <br>
 
 <h3>Projects</h3>
 <ul>
-    <li>
-        Post Modern Portfolio Theory (PMPT) and its Application to the DB GAPS Competition
-    </li>
-    <li>
-        Modern Portfolio Theory (MPT) and its Application to the DB GAPS Competition
-    </li>
+    <li><b>Gauging the fairness of Korean ELS product construction after the Hong Kong ELS incident</b></li>
+    <p>Advised by <a href="https://junkyung.yonsei.ac.kr/">Jun Kyung Auh</a>, <a href="https://biz.kw.ac.kr/introduce/member_view.php?no=108">Wonho Cho</a></p>
+    <p><i>Research Assistant</i>, Yonsei School of Business, Ongoing</p>
+    <p>
+        I gathered and preprocessed financial data from over 300,000 ELS products, utilizing open API from the Korea Securities Depository.
+        I am currently extracting relevant data from all ELS Prospectuses (Shelf Registrations) available on DART (Korean equivalent of EDGAR).
+    </p>
 </ul>
