--- a/index.html
+++ b/index.html
@@ -35,5 +35,5 @@ layout: default
 <br>
 <!-- Credit -->
 <div style="float: right;">
-    Website inspired by Professor <a href="https://sangmino.github.io/">Sangmin Simon Oh</a>
+    Website inspired by <a href="https://sangmino.github.io/">Sangmin Simon Oh</a>
 </div>
