--- a/research.html
+++ b/research.html
@@ -6,7 +6,7 @@ layout: default
 <ul>
     <li><b>Semibeta asset pricing model in the Korean market: An extension study</b> [<a href="/documents/semibeta.pdf">Paper</a>] [<a href="https://github.com/heewonh/semibeta">Code</a>]</li>
     <p>Advised by <a href="https://ysb.yonsei.ac.kr/faculty.asp?mid=n02&sOpt=&uid=59">Jaehoon Hahn</a></p>
-    <p style="color:#af4e1a"><i>Honors Program in Business, Yonsei School of Business, June 2024</i></p>
+    <p style="color:#d55f20"><i>Honors Program in Business, Yonsei School of Business, June 2024</i></p>
     <p>
         Abstract: This study extends the four-semibeta asset pricing model to the Korean stock
         market, including KOSPI, KOSDAQ and the overall market. Using updated data,
@@ -22,11 +22,13 @@ layout: default
 
 <h3>Projects</h3>
 <ul>
-    <li><b>Gauging the fairness of Korean ELS product construction after the Hong Kong ELS incident</b></li>
+    <li><b>Gauging the fairness of Korean ELS product construction</b></li>
     <p>Advised by <a href="https://junkyung.yonsei.ac.kr/">Jun Kyung Auh</a>, <a href="https://biz.kw.ac.kr/introduce/member_view.php?no=108">Wonho Cho</a></p>
-    <p style="color:#af4e1a"><i>Research Assistant, Yonsei School of Business, Ongoing</i></p>
+    <p style="color:#d55f20"><i>Research Assistant, Yonsei School of Business, Ongoing</i></p>
     <p>
-        I gathered and preprocessed financial data from over 300,000 ELS products, utilizing open API from the Korea Securities Depository.
+        I am assisting in research that aims to determine whether ELS products in Korea are inherently unfair towards investors in their design.
+        Events such as the recent Hong Kong ELS incident highlight the relevance of this topic.
+        During the project, I gathered and preprocessed financial data from over 300,000 ELS products, utilizing open API from the Korea Securities Depository.
         I am currently extracting relevant data from all ELS Prospectuses (Shelf Registrations) available on DART (Korean equivalent of EDGAR).
     </p>
 </ul>
