--- a/index.html
+++ b/index.html
@@ -34,6 +34,4 @@ layout: default
 <br>
 <br>
 <!-- Credit -->
-<div style="float: right;">
-    Website inspired by <a href="https://sangmino.github.io/">Sangmin Simon Oh</a>
-</div>
+<p>Website inspired by <a href="https://sangmino.github.io/">Sangmin Simon Oh</a></p>
