--- a/research.html
+++ b/research.html
@@ -29,6 +29,6 @@ layout: default
         I am assisting in research that aims to determine whether ELS products in Korea are inherently unfair towards investors in their design.
         Events such as the recent Hong Kong ELS incident highlight the relevance of this topic.
         During the project, I gathered and preprocessed financial data from over 300,000 ELS products, utilizing open API from the Korea Securities Depository.
-        I am currently extracting relevant data from all ELS Prospectuses (Shelf Registrations) available on DART (Korean equivalent of EDGAR).
+        I am currently extracting relevant data from all ELS prospectuses (shelf registrations) available on DART (Korean equivalent of EDGAR).
     </p>
 </ul>
