--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ layout: default
 </ul>
 <br>
 <br>
-<br>
-<br>
 <!-- Credit -->
-<p>Website inspired by <a href="https://sangmino.github.io/">Sangmin Simon Oh</a></p>
+<div style="float: right;">
+    Website inspired by <a href="https://sangmino.github.io/">Sangmin Simon Oh</a>
+</div>
