--- a/index.html
+++ b/index.html
@@ -33,5 +33,5 @@ layout: default
 <br>
 <!-- Credit -->
 <div style="float: right;">
-    Website inspired by <a href="https://sangmino.github.io/">Sangmin Simon Oh</a>
+    <i>Website inspired by <a href="https://sangmino.github.io/">Sangmin Simon Oh</a></i>
 </div>
