--- a/research.html
+++ b/research.html
@@ -4,7 +4,7 @@ layout: default
 
 <h3>Coursework</h3>
 <ul>
-    <li><b>Semibeta asset pricing model in the Korean market: An extension study</b> [<a href="/documents/semibeta.pdf">Paper</a>] [<a href="https://github.com/heewonh/semibeta">Code</a>]</li>
+    <li><b>Semibeta asset pricing model in the Korean market: An extension study</b> [<a href="/documents/semibeta.pdf">Paper</a>] [<a href="https://github.com/heewonh/semibeta">Code</a>] [<a href="/documents/semibeta_slides.pdf">Slides</a>]</li>
     <p>Advised by <a href="https://ysb.yonsei.ac.kr/faculty.asp?mid=n02&sOpt=&uid=59">Jaehoon Hahn</a></p>
     <p style="color:#d55f20"><i>Honors Program in Business, Yonsei School of Business, June 2024</i></p>
     <p>
