--- a/resources.html
+++ b/resources.html
@@ -1,3 +1,41 @@
 ---
 layout: default
 ---
+
+<h3>Finance</h3>
+<ul>
+    <li><a href="https://mba.tuck.dartmouth.edu/pages/faculty/ken.french/data_library.html">U.S. Factor Returns</a> data by Eugene Fama and Kenneth French</li>
+    <li><a href="https://pages.stern.nyu.edu/~adamodar/New_Home_Page/datafile/ctryprem.html">Country Default Spreads and Risk Premiums</a> data by Aswath Damodaran</li>
+    <li><a href="https://www.clevelandfed.org/indicators-and-data/inflation-nowcasting">Inflation Nowcasting</a> with daily estimates of present inflation by The Cleveland Fed</li>
+    <li><a href="https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html">FedWatch</a> with probabilities of Fed rate changes at upcoming FOMC meetings by CME Group</li>
+    <li><a href="https://podcasts.apple.com/kr/podcast/flirting-with-models/id1402620531">Flirting with Models</a> podcast hosted by Corey Hoffstein</li>
+    <li><a href="https://podcasts.apple.com/kr/podcast/acquired/id1050462261">Acquired</a> podcast hosted by Ben Gilbert and David Rosenthal</li>
+</ul>
+
+<h3>Programming and ML/AI</h3>
+<ul>
+    <li><a href="https://playground.tensorflow.org/#activation=tanh&batchSize=10&dataset=circle&regDataset=reg-plane&learningRate=0.03&regularizationRate=0&noise=0&networkShape=4,2&seed=0.64459&showTestData=false&discretize=false&percTrainData=50&x=true&y=true&xTimesY=false&xSquared=false&ySquared=false&cosX=false&sinX=false&cosY=false&sinY=false&collectStats=false&problem=classification&initZero=false&hideText=false">A Neural Network Playground</a> with an interactive demo of how Neural Networks work</li>
+    <li><a href="https://d2l.ai/">Dive into Deep Learning</a> interactive deep learning textbook by Aston Zhang, Zack C. Lipton, Mu Li, and Alex J. Smola</li>
+    <li><a href="https://cssbattle.dev/">CSSBattle</a> for practicing CSS via a multiplayer game</li>
+    <li><a href="https://missing.csail.mit.edu/">The Missing Semester of Your CS Education</a> by Anish Athalye, Jon Gjengset, and Jose Javier Gonzalez Ortiz</li>
+</ul>
+
+<h3>Collection of Interesting Papers</h3>
+<ul>
+    <li><a href="https://www.cambridge.org/core/journals/journal-of-financial-and-quantitative-analysis/article/do-alpha-males-deliver-alpha-facial-widthtoheight-ratio-and-hedge-funds/294FAA8791B44A45EB194E07667C0253">Do Alpha Males Deliver Alpha? Facial Width-to-Height Ratio and Hedge Funds</a> by Yan Lu and Melvyn Teo, <i>Journal of Financial and Quantitative Analysis</i></li>
+    <li><a href="https://onlinelibrary.wiley.com/doi/10.1111/jofi.13268">(Re-)Imag(in)ing Price Trends</a> by Jingwen Jiang, Bryan Kelly, and Dacheng Xiu, <i>Journal of Finance</i></li>
+    <li><a href="https://www.sciencedirect.com/science/article/pii/S0927538X1930722X">The Korea discount and chaebols</a> by Romain Ducret and Dušan Isakov, <i>Pacific-Basin Finance Journal</i></li>
+</ul>
+
+<h3>Grad School Application</h3>
+<ul>
+    <li><a href="https://drive.google.com/drive/folders/1A1iXhsCZwetgN5UPy2Vs6bBaOi7r3SEm">Public Folder for Guide to Business PhD Applications</a> by Megan Gorges and Stephen Turban</li>
+    <li><a href="https://jsom.utdallas.edu/the-utd-top-100-business-school-research-rankings/index.php">UT Dallas Business School Research Rankings</a></li>
+    <li><a href="https://wpcarey.asu.edu/finance-degrees/finance-rankings">ASU Finance research rankings</a></li>
+</ul>
+
+<h3>Miscellaneous</h3>
+<ul>
+    <li><a href="https://datalab.naver.com/">NAVER DataLab</a> for search trend data in Korea</li>
+    <li><a href="https://youtu.be/KmDYXaaT9sA?si=ownWU0wkkH7Soc_4">Conan O'Brien's 2011 Dartmouth College Commencement Address</a> for wise words, brilliant humor, and masterful public speaking</li>
+</ul>
