fix md notation

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: default
         <p>
             I am an undergraduate at Yonsei University, majoring in Business Administration with AI Concentration. 
             My research interest lies in finance, particularly in the fields of <b>asset pricing</b>, <b>investments</b>, and <b>financial machine learning</b>.
-            I am currently working as a research assistant at the Yonsei School of Business, under the guidance of <a href="https://junkyung.yonsei.ac.kr/">Jun Kyung Auh</a>.
+            I am currently working as a research assistant at the Yonsei School of Business, under the guidance of Prof. <a href="https://junkyung.yonsei.ac.kr/">Jun Kyung Auh</a>.
         </p>
     </div>
 </div>
@@ -33,5 +33,5 @@ layout: default
 <br>
 <!-- Credit -->
 <div style="float: right;">
-    <i>Website inspired by <a href="https://sangmino.github.io/">Sangmin Simon Oh</a></i>
+    <i>Website inspired by Prof. <a href="https://sangmino.github.io/">Sangmin Simon Oh</a></i>
 </div>
