--- a/research.html
+++ b/research.html
@@ -5,7 +5,7 @@ layout: default
 <h3>Coursework</h3>
 <ul>
     <li><b>Semibeta asset pricing model in the Korean market: An extension study</b> [<a href="/documents/semibeta.pdf">Paper</a>] [<a href="https://github.com/heewonh/semibeta">Code</a>] [<a href="/documents/semibeta_slides.pdf">Slides</a>]</li>
-    <p>Advised by <a href="https://ysb.yonsei.ac.kr/faculty.asp?mid=n02&sOpt=&uid=59">Jaehoon Hahn</a></p>
+    <p>Advised by Prof. <a href="https://ysb.yonsei.ac.kr/faculty.asp?mid=n02&sOpt=&uid=59">Jaehoon Hahn</a></p>
     <p style="color:#d55f20"><i>Honors Program in Business, Yonsei School of Business, June 2024</i></p>
     <p>
         Abstract: This study extends the four-semibeta asset pricing model to the Korean stock
@@ -23,7 +23,7 @@ layout: default
 <h3>Projects</h3>
 <ul>
     <li><b>Gauging the fairness of Korean ELS product construction</b></li>
-    <p>Advised by <a href="https://junkyung.yonsei.ac.kr/">Jun Kyung Auh</a>, <a href="https://biz.kw.ac.kr/introduce/member_view.php?no=108">Wonho Cho</a></p>
+    <p>Advised by Prof. <a href="https://junkyung.yonsei.ac.kr/">Jun Kyung Auh</a>, Prof. <a href="https://biz.kw.ac.kr/introduce/member_view.php?no=108">Wonho Cho</a></p>
     <p style="color:#d55f20"><i>Research Assistant, Yonsei School of Business, Ongoing</i></p>
     <p>
         I am assisting in research that aims to determine whether ELS products in Korea are inherently unfair towards investors in their design.
