--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@ layout: default
             <a href="https://www.linkedin.com/in/heewonhwang/"><i class="fab fa-linkedin-in"></i></a>
         </p>
         <p>Undergraduate Student, <a href="https://ysb.yonsei.ac.kr/default.asp?lang=e">Yonsei School of Business</a></p>
-        <br>
         <p>
-            I am an undergraduate at Yonsei University, majoring in Business Administration with AI Concentration. 
-            My research interest lies in finance, particularly in the fields of <b>asset pricing</b>, <b>investments</b>, and <b>financial machine learning</b>.
+            I am an undergraduate at Yonsei University, majoring in Business Administration with AI Concentration.
+            My research interest lies in finance, particularly in the fields of <b>Asset Pricing</b>, <b>Investments</b>, and <b>Financial Machine Learning</b>.
             I am currently working as a research assistant at the Yonsei School of Business, under the guidance of Prof. <a href="https://junkyung.yonsei.ac.kr/">Jun Kyung Auh</a>.
         </p>
     </div>
