font and style changes

--- a/research.html
+++ b/research.html
@@ -6,7 +6,7 @@ layout: default
 <ul>
     <li><b>Semibeta asset pricing model in the Korean market: An extension study</b> [<a href="/documents/semibeta.pdf">Paper</a>] [<a href="https://github.com/heewonh/semibeta">Code</a>] [<a href="/documents/semibeta_slides.pdf">Slides</a>]</li>
     <p>Advised by Prof. <a href="https://ysb.yonsei.ac.kr/faculty.asp?mid=n02&sOpt=&uid=59">Jaehoon Hahn</a></p>
-    <p style="color:#AA3731"><i>Honors Program in Business, Yonsei School of Business, June 2024</i></p>
+    <p style="color:#FB923C"><i>Honors Program in Business, Yonsei School of Business, June 2024</i></p>
     <p>
         Abstract: This study extends the four-semibeta asset pricing model to the Korean stock
         market, including KOSPI, KOSDAQ and the overall market. Using updated data,
@@ -24,7 +24,7 @@ layout: default
 <ul>
     <li><b>Gauging the fairness of Korean ELS product construction</b></li>
     <p>Advised by Prof. <a href="https://junkyung.yonsei.ac.kr/">Jun Kyung Auh</a>, Prof. <a href="https://biz.kw.ac.kr/introduce/member_view.php?no=108">Wonho Cho</a></p>
-    <p style="color:#AA3731"><i>Research Assistant, Yonsei School of Business, Ongoing</i></p>
+    <p style="color:#FB923C"><i>Research Assistant, Yonsei School of Business, Ongoing</i></p>
     <p>
         I am assisting in research that aims to determine whether ELS products in Korea are inherently unfair towards investors in their design.
         Events such as the recent Hong Kong ELS incident highlight the relevance of this topic.
