font style update

--- a/research.html
+++ b/research.html
@@ -6,7 +6,7 @@ layout: default
 <ul>
     <li><b>Semibeta asset pricing model in the Korean market: An extension study</b> [<a href="/documents/semibeta.pdf">Paper</a>] [<a href="https://github.com/heewonh/semibeta">Code</a>] [<a href="/documents/semibeta_slides.pdf">Slides</a>]</li>
     <p>Advised by Prof. <a href="https://ysb.yonsei.ac.kr/faculty.asp?mid=n02&sOpt=&uid=59">Jaehoon Hahn</a></p>
-    <p style="color:#C084FC"><i>Honors Program in Business, Yonsei School of Business, June 2024</i></p>
+    <p style="color:#ec6a00"><i>Honors Program in Business, Yonsei School of Business, June 2024</i></p>
     <p>
         Abstract: This study extends the four-semibeta asset pricing model to the Korean stock
         market, including KOSPI, KOSDAQ and the overall market. Using updated data,
