--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: default
         <p>Undergraduate Student, <a href="https://ysb.yonsei.ac.kr/default.asp?lang=e">Yonsei School of Business</a></p>
         <p>
             I am an undergraduate at Yonsei University, majoring in Business Administration with AI Concentration.
-            My research interest lies in finance, particularly in the fields of <b>Asset Pricing</b>, <b>Investments</b>, and <b>Financial Machine Learning</b>.
+            My research interest lies in finance, particularly in the fields of <b>Asset Pricing</b>, <b>Behavioral Finance</b>, <b>Downside Risk</b>, and <b>Machine Learning</b>.
             I am currently working as a research assistant at the Yonsei School of Business, under the guidance of Prof. <a href="https://junkyung.yonsei.ac.kr/">Jun Kyung Auh</a>.
         </p>
     </div>
