update research interest in home

--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@ layout: default
             <a href="https://x.com/heewonhwng?s=21"><i class="fab fa-twitter"></i></a>
             <a href="https://github.com/heewonh"><i class="fab fa-github"></i></a>
             <a href="https://www.linkedin.com/in/heewonhwang/"><i class="fab fa-linkedin-in"></i></a>
+            <br>
+            Undergraduate Student, <a href="https://ysb.yonsei.ac.kr/default.asp?lang=e">Yonsei School of Business</a>
         </p>
-        <p>Undergraduate Student, <a href="https://ysb.yonsei.ac.kr/default.asp?lang=e">Yonsei School of Business</a></p>
+        <!-- <p>Undergraduate Student, <a href="https://ysb.yonsei.ac.kr/default.asp?lang=e">Yonsei School of Business</a></p> -->
         <p>
             I am an undergraduate at Yonsei University, majoring in Business Administration with AI Concentration.
-            My research interest lies in finance, particularly in the fields of <b>Asset Pricing</b>, <b>Behavioral Finance</b>, <b>Downside Risk</b>, and <b>Machine Learning</b>.
+            My research interest lies in finance, with a focus on <b>Asset Pricing</b>, <b>Behavioral Finance</b>, and <b>Machine Learning</b>.
             I am currently working as a research assistant at the Yonsei School of Business, under the guidance of Prof. <a href="https://junkyung.yonsei.ac.kr/">Jun Kyung Auh</a>.
         </p>
     </div>
